<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/EtCardViewDesign"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_202sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sp1Cardview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="none"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sp1Cardview"
                style="@style/SpCardViewDesign"
                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/weightSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/WeightUnit"
                    android:textAlignment="center"
                    />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                style="@style/EtCardViewDesign"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_202sdp"
                app:cardCornerRadius="@dimen/_50sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cardView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="none"
                    android:background="@android:color/transparent"
                    android:hint="@string/height"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                style="@style/SpCardViewDesign"
                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView3"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/heightSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/HeightUnit"
                    android:textAlignment="center" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <Button
                android:id="@+id/calculate"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/cal_button"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_19ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/bmiCard"
                style="@style/BmiCardViewDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:backgroundTint="@color/bmiCard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bmi"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_35ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/bmiText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:text="@string/defBmi"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_35ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/bmiIndex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_35ssp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/normal"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>